--- a/Sentinel/app/src/main/res/values/strings.xml
+++ b/Sentinel/app/src/main/res/values/strings.xml
@@ -6,4 +6,25 @@
     <string name="cancel">Cancel</string>
     <string name="ok">Ok</string>
     <string name="device_disconnected">Device disconnected</string>
+
+    <string name="nearby_devices">Nearby Devices</string>
+    <string name="connect">CONNECT</string>
+    <string name="scan">SCAN</string>
+    <string name="select_date">Select Date</string>
+    <string name="set_of_duration">Set Of Duration</string>
+    <string name="send">SEND</string>
+    <string name="manual_c">MANUAL</string>
+    <string name="manual">Manual</string>
+    <string name="test_c">TEST</string>
+    <string name="test">Test</string>
+    <string name="rtc">RTC</string>
+    <string name="read">READ</string>
+    <string name="write">WRITE</string>
+    <string name="fan">Fan</string>
+    <string name="go_to_position">Go To Position</string>
+    <string name="confirm">CONFIRM</string>
+    <string name="date">Date</string>
+
+
+    <string name="connecting">Connecting...</string>
 </resources>
