--- a/Sentinel/app/src/main/res/values/strings.xml
+++ b/Sentinel/app/src/main/res/values/strings.xml
@@ -27,4 +27,10 @@
 
 
     <string name="connecting">Connecting...</string>
+    <string name="address">Address</string>
+    <string name="data">Data</string>
+    <string name="read_response">Read Response :</string>
+    <string name="enter_address_write">Enter address for write</string>
+    <string name="enter_address_read">Enter address for read</string>
+    <string name="enter_data_write">Enter data for write</string>
 </resources>
