--- a/Sentinel/app/src/main/res/values/strings.xml
+++ b/Sentinel/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="enter_address_write">Enter address for write</string>
     <string name="enter_address_read">Enter address for read</string>
     <string name="enter_data_write">Enter data for write</string>
+    <string name="enter_valid_data">Enter valid hax data</string>
 </resources>
